# CSV-Reader

./: .gitignore  CMakeLists.txt  README.md  mingw.bat
src/: CMakeLists.txt  CSVReader.cpp  CSVReader.h
src/tests/: CMakeLists.txt  tests.cpp
